css/style.css
html, button, input, select, textarea { color: #222; }
:focus { outline: none; }

body { font: 20px georgia; margin: 0; }
a    { color: #3e0078; font-style: italic; text-decoration: none; }

#body       { color: #444; }
#body, menu { max-width: 39em; margin: auto; padding: 15px 0; }
#blackline  { background: #444; }

menu            { color: #999; }
menu a          { color: #ccc; font-style: normal; }
menu menuitem   { display: inline-block; margin-left: 2em; }
#home           { display: block; margin-left: 0; font: bold 40px 'Helvetica'; display: block; }

#index a { font-style: normal; color: #999; }
#index ul { margin: 2em 0 0; padding: 0; }
#index li { margin: 0 0 1em; padding: 0; list-style: none; font-family: 'Monospace'; position: relative; }
#index li:hover:before {
    margin-left: -1em;
    content: "§";
    position: absolute;
    left: 0;
    top: 0;
}

#code h3 { margin-bottom: 0.33em; font-size: 12px; }
#code h4 { margin-bottom: 2.33em; font-size: 12px; color: #777; }

#code a                   { font-style: normal; }
#code h4 a:first-child,
#code h3 a:first-child    { display: inline-block; font-style: italic; }
#code h3 a:first-child { font-size: 2em; padding-right: 1em; }
#code h4 a:first-child { font-size: 1.3em; padding-right: 0.66em; }

#code p { margin: 0 0 1.5em 2em; }

.date {
    position: absolute;
    margin-left: -13em;
    left: 0;
    top: 0;
    width: 10em;
    text-align: right;
    font: 20px;
    font-style: italic;
}

/* article */
article p       { /* text-indent: 1em; either it looks great or turns everything to shit, so unfortunately to the trash it goes. */ }
article header  { position: relative; line-height: 40px; }
article p code  { padding: 1px; background: #f0f0f0; padding: 2px; font-size: 15px; }
article pre     { padding: 0.5em; background: #eacafc; font-size: 12px; color: black; margin-left: 60px; }
article li      { list-style-type: decimal; }
article img     { float: right; padding: 10px 0 10px 20px; }

article blockquote        { background: #f9f9f9; border-left: 10px solid #ccc; margin: 0 0 0 60px; padding: 0.5em; }
article blockquote:before { color: #ccc; content: open-quote; font-size: 4em; line-height: 0.1em; margin-right: 0.25em; vertical-align: -0.4em; }
article blockquote p      { display: inline; }

article p a code,
article a:hover  { text-decoration: underline; }

article h1,
article h2        { position: relative; }
article h1:before { font-size: 40px; }
article h1        { font-size: 40px; }
article h2:before { font-size: 30px; }
article h2        { font-size: 30px; }

article h1:hover:before,
article h2:hover:before {
    margin-left: -1em;
    content: "¶";
    position: absolute;
    left: 0;
    top: 0;
}

.footnotes ol li p a:last-child { padding-left: 10px; }

.sep, #end {
    width: 2em;
    margin: 1em auto;
    border-top: 1px dotted;
    text-align: center;
    font-size: 3.5em;
    font-family: georgia, 'Arial Unicode MS', 'Code2000', 'DejaVu Sans', 'Dingbats', 'EversonMono',
    'EversonMono-Bold', 'EversonMono-BoldOblique', 'EversonMono-ObliquDejaVuique', 'FreeSerif',
    'GNU Unifont', 'JunicodeRegular', 'LastResort', 'LeedsUni', 'Segoe UI Symbol', 'Symbola';
}
.sep { margin: 25px auto 35px; }

/* footer { border-top: 1px dotted #222; margin: 2em 1em 1em; } */

.clearfix:before, .clearfix:after { content: " "; display: table; }
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }

